--- a/controls/cis_ocp_1_4_0/section-3.yml
+++ b/controls/cis_ocp_1_4_0/section-3.yml
@@ -1,36 +1,39 @@
+---
 controls:
-- id: '3'
-  title: Control Plane Configuration
-  status: pending
-  rules: []
-  controls:
-  - id: '3.1'
-    title: Authentication and Authorization
-    status: automated
-    rules: []
-    controls:
-    - id: 3.1.1
-      title: Client certificate authentication should not be used for users
-      status: automated
-      rules:
-        - idp_is_configured
-        - kubeadmin_removed
-      levels: [ level_2, ]
-  - id: '3.2'
-    title: Logging
-    status: automated
-    rules: []
-    controls:
-    - id: 3.2.1
-      title: Ensure that a minimal audit policy is created
-      status: automated
-      rules:
-        - audit_logging_enabled
-      levels: [ level_1, ]
-    - id: 3.2.2
-      title: Ensure that the audit policy covers key security concerns
-      status: automated
-      rules:
-        - audit_profile_set
-      levels: [ level_2, ]
-
+    - id: '3'
+      title: Control Plane Configuration
+      status: pending
+      rules: []
+      controls:
+          - id: '3.1'
+            title: Authentication and Authorization
+            status: automated
+            rules: []
+            controls:
+                - id: 3.1.1
+                  title: Client certificate authentication should not be used for users
+                  status: automated
+                  rules:
+                      - idp_is_configured
+                      - kubeadmin_removed
+                  levels:
+                      - level_2
+          - id: '3.2'
+            title: Logging
+            status: automated
+            rules: []
+            controls:
+                - id: 3.2.1
+                  title: Ensure that a minimal audit policy is created
+                  status: automated
+                  rules:
+                      - audit_logging_enabled
+                  levels:
+                      - level_1
+                - id: 3.2.2
+                  title: Ensure that the audit policy covers key security concerns
+                  status: automated
+                  rules:
+                      - audit_profile_set
+                  levels:
+                      - level_2
