Implement file_ownerships_var_log_landscape rule
Rule ensures /var/log/landscape is owned by root|landscape

--- a/components/filesystem.yml
+++ b/components/filesystem.yml
@@ -87,6 +87,7 @@ rules:
 - file_ownership_library_dirs
 - file_ownerships_var_log
 - file_ownerships_var_log_apt
+- file_ownerships_var_log_landscape
 - file_ownerships_var_log_gdm
 - file_ownerships_var_log_gdm3
 - file_ownerships_var_log_sssd
