--- a/controls/cis_ubuntu2404.yml
+++ b/controls/cis_ubuntu2404.yml
@@ -2461,6 +2461,7 @@ controls:
       - file_ownerships_var_log_apt
       - file_ownerships_var_log_gdm
       - file_ownerships_var_log_gdm3
+      - file_ownerships_var_log_landscape
       - file_ownerships_var_log_sssd
       - file_owner_var_log_auth
       - file_owner_var_log_cloud_init
