--- a/linux_os/guide/system/bootloader-grub2/uefi/grub2_uefi_password/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/uefi/grub2_uefi_password/rule.yml
@@ -28,7 +28,7 @@ description: |-
     update the
     <tt>grub.cfg</tt> file by running:
     {{%- if "rhel" in product %}}
-    <pre>grub-mkconfig -o /boot/grub2/grub.cfg</pre>
+    <pre>grub2-mkconfig -o /boot/grub2/grub.cfg</pre>
     {{%- else %}}
     <pre>{{{ grub_command("update") }}}</pre>
     {{%- endif %}}
@@ -109,7 +109,7 @@ fixtext: |-
     Then, update the grub.cfg file by running:
 
     {{%- if "rhel" in product %}}
-    <pre>grub-mkconfig -o /boot/grub2/grub.cfg</pre>
+    <pre>grub2-mkconfig -o /boot/grub2/grub.cfg</pre>
     {{%- else %}}
     <pre>{{{ grub_command("update") }}}</pre>
     {{%- endif %}}
