--- a/linux_os/guide/services/ntp/service_timesyncd_configured/ansible/shared.yml
+++ b/linux_os/guide/services/ntp/service_timesyncd_configured/ansible/shared.yml
@@ -7,13 +7,11 @@
 
 - name: {{{ rule_title }}} - Set Primary NTP Servers
   ansible.builtin.set_fact:
-    preferred_ntp_servers: '{{ var_multiple_time_servers.split(",") | slice(2)| first |
-    join(",") }}'
+    preferred_ntp_servers: '{{ var_multiple_time_servers | regex_replace("[,]+", " ") | split(" ") | slice(2) | first | join(" ") }}'
 
 - name: {{{ rule_title }}} - Set Fallback NTP Servers
   ansible.builtin.set_fact:
-    fallback_ntp_servers: '{{ var_multiple_time_servers.split(",") | slice(2)| list | last |
-    join(",") }}'
+    fallback_ntp_servers: '{{ var_multiple_time_servers | regex_replace("[,]+", " ") | split(" ") | slice(2) | last | join(" ") }}'
 
 - name: {{{ rule_title }}} - Add missing / update wrong records for NTP servers
   ansible.builtin.lineinfile:
